--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
   <script src="gmaps.js"></script>
 </head>
 <body>
-
+<h1>Index</h1>
   <div id="app"></div>
-
 
   <script src="build/bundle.js"></script>
 </body>
